--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/debug-agent": "^5.2.2",
     "apollo-server-express": "^2.25.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "firebase-admin": "^9.9.0",
+    "graphql": "^15.5.0"
   }
 }
